License info and updated readme

--- a/src/c/external/README
+++ b/src/c/external/README
@@ -2,4 +2,4 @@ This folder contains external source-only dependencies which are distributed alo
 
 External dependencies:
  - py3c - https://py3c.readthedocs.io
- 
+ - boost - https://www.boost.org/
